--- a/web-app/backend/package.json
+++ b/web-app/backend/package.json
@@ -1,1 +1,10 @@
-
+{
+  "name": "smart-library-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "type": "module",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.19.0"
+  }
+}
