Added waitlist notification feature through email and integrated frontend form

--- a/web-app/backend/package.json
+++ b/web-app/backend/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.19.0"
+    "dotenv": "^17.2.3",
+    "express": "^4.19.0",
+    "nodemailer": "^7.0.11"
   }
 }
